--- a/_docs/行程概括.md
+++ b/_docs/行程概括.md
@@ -3,11 +3,11 @@ title: 行程概括
 permalink: /docs/行程概括/
 redirect_from: /docs/index.html
 ---
-**美国斯坦福大学科技夏令营一周 + 硅谷户外拓展夏令营一周 + 两个周末探索硅谷和游览旧金山，品味当地美食!**
+**美国斯坦福大学科技夏令营一周 + 硅谷户外拓展夏令营一周 + 两个周末探索硅谷和游览旧金山!**
 
-**1: 周日学生飞抵旧金山国际机场**
+**1: 周日飞抵旧金山国际机场**
 
-周日学生从国内飞抵旧金山国际机场（SFO)，我们将接送学生到斯坦福大学教室进行夏令营欢迎仪式和夏令营入营宣讲。
+学生从国内所在地飞抵旧金山国际机场（SFO)后，我们将接送学生到斯坦福大学教室进行夏令营欢迎仪式和入营宣讲，并安排当晚的食宿。
 
 **2: 第一周（周一至周五):美国名校斯坦福大学访学一周**
 
@@ -21,11 +21,11 @@ redirect_from: /docs/index.html
 
 * 金门大桥和渔人码头
 * 加州大学伯克利分校
-* 硅谷高科技公司，例如苹果和谷歌公司
+* 硅谷高科技公司，包括苹果和谷歌公司
 
 **4: 第二周（周一至周五）：综合素质拓展夏令营一周（两个夏令营可供选择）**
 
-* **四叶草牧场夏令营**为孩子提供丰富多彩的夏令营体验，涵盖户外活动、团队合作、手工艺、骑马等活动，旨在激发孩子们的好奇心，培养他们的领导力和社交技能。通过参与各种有趣的活动，他们将建立起与大自然的深厚联系，并与其他营员一同度过难忘的时光。
+* **四叶草牧场夏令营**为孩子提供丰富多彩的夏令营体验，涵盖户外活动、团队合作、手工艺、马术，露营等活动，培养他们的领导力和社交技能。通过参与各种有趣的活动，他们将建立起与大自然的深厚联系，并与其他营员一同度过难忘的时光。
   * **此夏令营为夜营，学生会安排在夏令营所在的宿舍区居住。**
 
 * **伽利略夏令营**是一个备受赞誉的暑期营地项目，旨在激发孩子们的求知欲，创造力，动手能力和创新精神。营员们将参与涵盖科学，技术，工程，艺术和数学学科的项目和活动。从建造机器人和编写应用程序到探索自然奇观和制作独特的艺术品，伽利略营地让孩子们在实践中学习，探索自己的兴趣。
@@ -33,5 +33,5 @@ redirect_from: /docs/index.html
 
 **5: 第二周周末（周六至周日）：**
 
-* 周六会带孩子游览加州一号公路，感受壮美的太平洋西海岸美景。并且带孩子游览中美元首会晤的菲洛里庄园，在庄园草坪上午餐。晚上举行欢送仪式。
+* 周六会带孩子游览加州一号公路，感受壮美的太平洋西海岸美景。并且带孩子游览2023年中美元首会晤的菲洛里庄园，在庄园草坪上午餐。晚上举行欢送仪式。
 * 周日会送孩子搭乘回国航班，让孩子回到温暖的家。
