--- a/_docs/斯坦福大学科技夏令营.md
+++ b/_docs/斯坦福大学科技夏令营.md
@@ -37,14 +37,15 @@ permalink: /docs/斯坦福大学科技夏令营/
 创建可运行的代码和交互游戏
 课程形式： 
 这是一周的课程，从周一到周五进行。学习将在斯坦福大学的计算机实验室进行，孩子将随机和美国当地的孩子分成小组，并由经验丰富的老师进行指导。每天的课程将在电脑上的学习时间和其他娱乐活动之间取得平衡，包括分组游戏和讨论等。
-#### 课程设计： 
+
+**课程设计：** 
 * 周一：学习编程基础
 * 周二：设计变量型游戏
 * 周三：设计视觉机器人，并使其能独立在迷宫中导航。
 * 周四：将上述程序用python语言重现
 * 周五：用Scratch或者VEXcode VR封装所写程序，并展示报告
 
-#### 常见问题： 
+**常见问题：** 
 * 1: 这门课程是否适合年龄较小的孩子？
 此课程专门为7-9岁的孩子设计，旨在启蒙他们的编程思维，通过游戏设计的方式激发学生的学习兴趣，并在学习的过程中培养孩子对编程的理解和兴趣。 
 * 2: 为什么孩子要学习scratch? 
@@ -61,7 +62,7 @@ permalink: /docs/斯坦福大学科技夏令营/
 在实际应用中实践复杂的3D模型制作。
 往期成果展示：
 
-#### 常见问题： 
+**常见问题：** 
 * 1: 为什么要学习3d打印和建模？
 3d打印和建模已经广泛应用到多个行业，例如建筑，游戏，电影特效。是未来从事设计行业人员的必备技能。 
 * 2: 此课程适合什么年龄段的孩子
@@ -69,6 +70,7 @@ permalink: /docs/斯坦福大学科技夏令营/
 
 ### 人工智能实验室
 **简介：** 自从AlphaGo横空出世，我们已经进入了人工智能社会。ChatGPT于2022年底问世，更是加速了人类社会迈入人工智能2.0时代的步伐。未来对具备专业知识的人工智能专业人士的需求前所未有。从文本生成和图像识别到自动化聊天回应和自然语言处理，人工智能正推动着我们的技术迈向未来。本课程的设计初衷在于强化学生对人工智能发展历史和前沿的基本了解，介绍如何利用Python的基础知识探索先进的人工智能技术，包括流行工具如OpenAI、ChatGPT和TensorFlow。学生将学到如何利用神经网络工具和成熟的机器学习模型快速构建新模型，以执行特定的人工智能日常任务。我们期望通过本课程，学生能更深入地了解当前人工智能技术和模型开发过程。
+
 **课程涵盖:**
 * 学习使用Python进行人工智能编程。
 * 学习如何使用图形化的人工智能平台和TensorFlow创建轻量级神经网络。 
