--- a/_docs/斯坦福大学科技夏令营.md
+++ b/_docs/斯坦福大学科技夏令营.md
@@ -53,7 +53,7 @@ permalink: /docs/斯坦福大学科技夏令营/
 * 3: 此课程是否可以为编程零基础？
 是的，此课程专门为编程零基础的年龄较小的孩子设计。
 
-### 3D打印机和建模 （10-12岁， 或者13-15岁）
+### 3D打印机和建模
 **简介：** 这门课程将借由孩子强大的想象力，将梦想中生动的设计和幻想世界通过强大的3D打印机转化为实际存在的现实---触感丰富的艺术品。学生将运用Blender这一强大的3D建模软件，学习建模的基本技能，该软件被广泛应用于电影和游戏工作室，比如漫威。学生将从最初的草图开始，贯穿整个过程，从零开始雕刻创作自己的角色，并将其打印成可以在桌子上展示或与朋友分享的立体模型！同时，学生还需要学会操作和维护设备。最令人兴奋的一部分是什么呢？学生将有机会为自己的作品上色，并携带所有打印出的模型回家。这些作品不仅可以用于申请美国学校的作品集，还能丰富未来从事模型设计或3D建模职业的简历。
 课程涵盖： 
 熟练掌握3D打印的整个过程，从模型设计到最终的打印。 
