--- a/_docs/伽利略夏令营.md
+++ b/_docs/伽利略夏令营.md
@@ -4,7 +4,7 @@ permalink: /docs/伽利略夏令营/
 ---
 
 ### 简介： 
-*在2002年，斯坦福大学的Glen Tripp在加州硅谷帕洛阿尔托创建了第一个夏令营，以16世纪伟大的科学家伽利略·伽利莱的名字命名。他的目标是通过灌输伽利略的无畏和创造性行动精神，激发孩子们对科技探索兴趣。作为加州地区最受欢迎的科技创新夏令营之一，伽利略Galileo提供有趣且丰富的课程。伽利略夏令营融合了娱乐和学习，覆盖从学前班到8年级的广泛年龄范围。采用伽利略创新方法®，该夏令营鼓励孩子们迎接挑战，从错误中学习，并在一个无畏且充满信心的环境中创造。*
+在2002年，斯坦福大学的Glen Tripp在加州硅谷帕洛阿尔托创建了第一个夏令营，以16世纪伟大的科学家伽利略·伽利莱的名字命名。他的目标是通过灌输伽利略的无畏和创造性行动精神，激发孩子们对科技探索兴趣。作为加州地区最受欢迎的科技创新夏令营之一，伽利略Galileo提供有趣且丰富的课程。伽利略夏令营融合了娱乐和学习，覆盖从学前班到8年级的广泛年龄范围。采用伽利略创新方法®，该夏令营鼓励孩子们迎接挑战，从错误中学习，并在一个无畏且充满信心的环境中创造。
 
 ### 2024夏令营代表主题课程（时常：一周）
 
