--- a/_docs/斯坦福大学科技夏令营.md
+++ b/_docs/斯坦福大学科技夏令营.md
@@ -30,24 +30,24 @@ permalink: /docs/斯坦福大学科技夏令营/
   
 ## 特色的课程（部分）：
 ### 利用Scratch 设计视觉游戏
-**简介：** 本课程采用Scratch、VEXcode VR等工具的设计，通过有趣的游戏开放和直观的模块化编程，为低龄孩子提供编程启蒙，激发其兴趣，培养基本的编程思维。使用Scratch等工具，孩子们可以构建交互式程序，创作丰富想象力的游戏，比如驾驶飞行器前往太空，消灭路径上的流星和障碍。此外，借助VEXcode VR编程平台，孩子们学习如何通过编程创建虚拟机器人，使其能够独立导航迷宫。VEXcode VR同时提供图形化编程工具和Python文本式编程工具，通过课程，孩子将学到一些Python初步编程思想，深入了解幕后运作，并开始编写自己的Python代码。
-课程涵盖： 
-创建一个简单的游戏程序
-学习变量概念和控制语句
-创建可运行的代码和交互游戏
-课程形式： 
-这是一周的课程，从周一到周五进行。学习将在斯坦福大学的计算机实验室进行，孩子将随机和美国当地的孩子分成小组，并由经验丰富的老师进行指导。每天的课程将在电脑上的学习时间和其他娱乐活动之间取得平衡，包括分组游戏和讨论等。
+**简介：** 本课程采用Scratch、VEXcode VR等工具的设计，通过有趣的游戏开放和直观的模块化编程，为低龄孩子提供编程启蒙，激发其兴趣，培养基本的编程思维。使用Scratch等工具，孩子们可以构建交互式程序，创作丰富想象力的游戏，比如驾驶飞行器前往太空，消灭路径上的流星和障碍。此外，借助VEXcode VR编程平台，孩子们学习如何通过编程创建虚拟机器人，使其能够独立导航迷宫。
+
+**课程涵盖:** 
+* 创建一个简单的游戏程序
+* 学习变量概念和控制语句
+* 创建可运行的代码和交互游戏
 
 ### 3D打印机和建模
-**简介：** 这门课程将借由孩子强大的想象力，将梦想中生动的设计和幻想世界通过强大的3D打印机转化为实际存在的现实---触感丰富的艺术品。学生将运用Blender这一强大的3D建模软件，学习建模的基本技能，该软件被广泛应用于电影和游戏工作室，比如漫威。学生将从最初的草图开始，贯穿整个过程，从零开始雕刻创作自己的角色，并将其打印成可以在桌子上展示或与朋友分享的立体模型！同时，学生还需要学会操作和维护设备。最令人兴奋的一部分是什么呢？学生将有机会为自己的作品上色，并携带所有打印出的模型回家。这些作品不仅可以用于申请美国学校的作品集，还能丰富未来从事模型设计或3D建模职业的简历。
-课程涵盖： 
-熟练掌握3D打印的整个过程，从模型设计到最终的打印。 
-手工设计和雕刻独一无二的3D人物和物品。 
-深入了解3D打印机的工作原理以及相关的配套软件。 
-在实际应用中实践复杂的3D模型制作。
+**简介：** 这门课程将借由孩子强大的想象力，将梦想中生动的设计和幻想世界通过强大的3D打印机转化为实际存在的现实---触感丰富的艺术品。学生将运用Blender这一强大的3D建模软件，学习建模的基本技能。学生将从最初的草图开始，贯穿整个过程，从零开始雕刻创作自己的角色，并将其打印成可以在桌子上展示或与朋友分享的立体模型！学生将有机会为自己的作品上色，并携带所有打印出的模型回家。这些作品不仅可以用于申请美国学校的作品集，还能丰富未来从事模型设计或3D建模职业的简历。
+
+**课程涵盖:** 
+* 熟练掌握3D打印的整个过程，从模型设计到最终的打印。 
+* 手工设计和雕刻独一无二的3D人物和物品。 
+* 深入了解3D打印机的工作原理以及相关的配套软件。 
+* 在实际应用中实践复杂的3D模型制作。
 
 ### 人工智能实验室
-**简介：** 自从AlphaGo横空出世，我们已经进入了人工智能社会。ChatGPT于2022年底问世，更是加速了人类社会迈入人工智能2.0时代的步伐。未来对具备专业知识的人工智能专业人士的需求前所未有。从文本生成和图像识别到自动化聊天回应和自然语言处理，人工智能正推动着我们的技术迈向未来。本课程的设计初衷在于强化学生对人工智能发展历史和前沿的基本了解，介绍如何利用Python的基础知识探索先进的人工智能技术，包括流行工具如OpenAI、ChatGPT和TensorFlow。学生将学到如何利用神经网络工具和成熟的机器学习模型快速构建新模型，以执行特定的人工智能日常任务。我们期望通过本课程，学生能更深入地了解当前人工智能技术和模型开发过程。
+**简介：** 自从AlphaGo横空出世，我们已经进入了人工智能社会。ChatGPT于2022年底问世，更是加速了人类社会迈入人工智能2.0时代的步伐。未来对具备专业知识的人工智能专业人士的需求前所未有。从文本生成和图像识别到自动化聊天回应和自然语言处理，人工智能正推动着我们的技术迈向未来。本课程的设计初衷在于强化学生对人工智能发展历史和前沿的基本了解，介绍如何利用Python的基础知识探索先进的人工智能技术，包括流行工具如ChatGPT和TensorFlow。学生将学到如何利用神经网络工具和成熟的机器学习模型快速构建新模型，以执行特定的人工智能日常任务。
 
 **课程涵盖:**
 * 学习使用Python进行人工智能编程。
