--- a/_docs/我要报名.md
+++ b/_docs/我要报名.md
@@ -8,6 +8,8 @@ permalink: /docs/我要报名/
 
 ![报名二维码](/img/报名表二维码.jpg){:height="50%" width="50%"}
 
+<img src="/img/报名表二维码.jpg" width="200px" />
+
 ## 付款与退款时间表
 
 * 预付定金 5000rmb（可以提供收据或发票）。
