--- a/_docs/图片和视频.md
+++ b/_docs/图片和视频.md
@@ -5,6 +5,8 @@ redirect_from: /docs/index.html
 ---
 
 ## 斯坦福大学科技营
+<img src="/img/斯坦福大学-1.jpeg" width="500px" />
+美丽的斯坦福大学校园
 ![斯坦福大学](/img/斯坦福大学-1.jpeg)
 ![斯坦福大学科技营-1](/img/id-tech-夏令营-1.webp)
 ![斯坦福大学科技营-2](/img/id-tech-夏令营-2.jpg)
