--- a/_docs/图片和视频.md
+++ b/_docs/图片和视频.md
@@ -5,14 +5,21 @@ redirect_from: /docs/index.html
 ---
 
 ## 斯坦福大学科技营
-<img src="/img/斯坦福大学-1.jpeg" width="500px" />
 美丽的斯坦福大学校园
-![斯坦福大学](/img/斯坦福大学-1.jpeg)
-![斯坦福大学科技营-1](/img/id-tech-夏令营-1.webp)
-![斯坦福大学科技营-2](/img/id-tech-夏令营-2.jpg)
-![斯坦福大学科技营-3](/img/id-tech-夏令营-3.jpg)
-![斯坦福大学科技营-4](/img/id-tech-夏令营-4.jpeg)
-![斯坦福大学科技营-5](/img/id-tech-夏令营-证书.JPG)
+
+<img src="/img/斯坦福大学-1.jpeg" width="500px" />
+
+孩子们在参加机器人课程
+
+<img src="/img/id-tech-夏令营-1.webp" width="500px" />
+
+孩子们在进行编程方面的讨论
+
+<img src="/img/id-tech-夏令营-2.jpg" width="500px" />
+
+结业证书
+
+<img src="/img/id-tech-夏令营-证书.JPG" width="500px" />
 
 ## 四叶草牧场户外营
 ![四叶草牧场夏令营-1](/img/四叶草夏令营-射箭.png)
