--- a/_docs/图片和视频.md
+++ b/_docs/图片和视频.md
@@ -19,7 +19,7 @@ redirect_from: /docs/index.html
 
 结业证书
 
-<img src="/img/id-tech-夏令营-证书.JPG" width="500px" />
+<img src="/img/id-tech-夏令营-证书.JPG" height="250px" width="500px" />
 
 ## 四叶草牧场户外营
 ![四叶草牧场夏令营-1](/img/四叶草夏令营-射箭.png)
