--- a/_docs/图片和视频.md
+++ b/_docs/图片和视频.md
@@ -15,11 +15,11 @@ redirect_from: /docs/index.html
 
 孩子们在进行编程方面的讨论
 
-<img src="/img/id-tech-夏令营-2.jpg" width="500px" />
+<img src="/img/id-tech-夏令营-2.jpg" height="350px" width="500px" />
 
 结业证书
 
-<img src="/img/id-tech-夏令营-证书.JPG" height="250px" width="500px" />
+<img src="/img/id-tech-夏令营-证书.JPG" width="500px" />
 
 ## 四叶草牧场户外营
 ![四叶草牧场夏令营-1](/img/四叶草夏令营-射箭.png)
