--- a/_docs/图片和视频.md
+++ b/_docs/图片和视频.md
@@ -22,10 +22,17 @@ redirect_from: /docs/index.html
 <img src="/img/id-tech-夏令营-证书.JPG" width="500px" />
 
 ## 四叶草牧场户外营
-![四叶草牧场夏令营-1](/img/四叶草夏令营-射箭.png)
-![四叶草牧场夏令营-2](/img/四叶草夏令营-游泳.png)
-![四叶草牧场夏令营-3](/img/四叶草夏令营-篝火.png)
-![四叶草牧场夏令营-4](/img/四叶草夏令营-团体游戏.png)
+射箭活动
+<img src="/img/四叶草夏令营-射箭.png" width="500px" />
+
+夏日游泳
+<img src="/img/四叶草夏令营-游泳.png" width="500px" />
+
+篝火晚会
+<img src="/img/四叶草夏令营-篝火.png" width="500px" />
+
+团体游戏
+<img src="/img/四叶草夏令营-团体游戏.png" width="500px" />
 
 ## 伽利略夏令营
 ![伽利略夏令营-1](/img/伽利略夏令营-1.webp)
