--- a/_docs/图片和视频.md
+++ b/_docs/图片和视频.md
@@ -23,15 +23,19 @@ redirect_from: /docs/index.html
 
 ## 四叶草牧场户外营
 射箭活动
-<img src="/img/四叶草夏令营-射箭.png" width="500px" />
+
+<img src="/img/四叶草夏令营-射箭.png" height="350px" width="500px" />
 
 夏日游泳
-<img src="/img/四叶草夏令营-游泳.png" width="500px" />
+
+<img src="/img/四叶草夏令营-游泳.png" height="350px" width="500px" />
 
 篝火晚会
+
 <img src="/img/四叶草夏令营-篝火.png" width="500px" />
 
 团体游戏
+
 <img src="/img/四叶草夏令营-团体游戏.png" width="500px" />
 
 ## 伽利略夏令营
