--- a/_docs/图片和视频.md
+++ b/_docs/图片和视频.md
@@ -39,11 +39,17 @@ redirect_from: /docs/index.html
 <img src="/img/四叶草夏令营-团体游戏.png" width="500px" />
 
 ## 伽利略夏令营
-![伽利略夏令营-1](/img/伽利略夏令营-1.webp)
-![伽利略夏令营-2](/img/伽利略夏令营-2.jpg)
-![伽利略夏令营-3](/img/伽利略夏令营-3.png)
+学生在参加机器人课程
+
+<img src="/img/伽利略夏令营-1.webp"  width="500px" />
+
+学生在驾驶自己组装的卡丁车
+
+<img src="/img/伽利略夏令营-2.jpg" height="400px" width="500px" />
 
 ## 加州湾区风景
-![金门大桥](/img/金门大桥.jpg)
-![旧金山城市](/img/旧金山城市.jpg)
+
+壮美的金门大桥
+<img src="/img/金门大桥.jpg"  width="500px" />
+
 
