--- a/_docs/联系我们.md
+++ b/_docs/联系我们.md
@@ -5,7 +5,8 @@ redirect_from: /docs/index.html
 ---
 
 ## 联系方式
-* 微信：anhuifangm
+* 请扫码入微信群：
+  * <img src="/img/微信群.jpg" width="200px" />
 * 邮箱：fangmingbnu@gmail.com
 * 电话：+1-832-331-7493
 
