--- a/_docs/套餐方案与价格.md
+++ b/_docs/套餐方案与价格.md
@@ -4,27 +4,29 @@ permalink: /docs/套餐方案与价格/
 redirect_from: /docs/index.html
 ---
 
-**套餐A (推荐）：一周斯坦福科技夏令营 + 一周四叶草牧场夏令营** 
+<br>
+
+#### ▶︎ 套餐方案
+##### A套餐 (**推荐**）：斯坦福科技夏令营一周 + 四叶草牧场夏令营
 
 > 价格：49999 人民币
 
 
-**套餐B ：一周斯坦福科技夏令营 + 一周伽利略夏令营** 
+##### B套餐 ：斯坦福科技夏令营一周 + 伽利略夏令营 
+
 
 > 价格：56666 人民币
 
-**注意** 
-* 斯坦福科技夏令营期间，十岁以下需住在酒店，晚上有助教陪同监督，十岁以上住在斯坦福大学学生宿舍。
-* 上述价格只包含美国的食宿，交通，保险和学费，但是不含机票和签证。
 
-**斯坦福科技夏令营可选课程**
 
-* 7-9 岁
+#### ▶︎ 夏令营可选课程
+##### **斯坦福科技夏令营**
+* **7-9 岁**
   * Game Design with Minecraft
   * Roblox Camp: Launch Your Own Obby Game
   * Coding Camp: Virtual Robotics and Scratch
   * BattleBots Camp Junior
-* 10-12 岁
+* **10-12 岁**
   * Roblox Developer: Imaginative Game Design
   * Roblox Developer: Lua Coding and Game Design
   * Jave Coding: Build Mods with Minecraft
@@ -35,8 +37,8 @@ redirect_from: /docs/index.html
   * Digital Video Production for Youtube
   * 3D printing and Modeling with Take-Home Printer
   * Digital Art and Animation Studio with Adobe
-  * Digital Art and Animation Studio with Adobe (girls only)
-* 13-15 岁
+  * Digital Art and Animation Studio with Adobe (girls only)<br>
+* **13-15 岁**
   * Game Design and Development 101 with Unreal Engine
   * VR Game Design with Unity and Meta Quest
   * Intro to Python Coding for Machine Learning
@@ -46,26 +48,32 @@ redirect_from: /docs/index.html
   * 3D printing and Modeling with Take-Home Printer
   * Digital Video Production and Effects
   * AI Experimentation Lab
-  * AI Art Studio
+  * AI Art Studio<br>
 
-**伽利略夏令营可选课程**
-* 7-9岁年龄段： 
+
+##### **伽利略夏令营**
+* **7-9 岁**
   * Inventor’s garage 
   * Tropical rainforest trek 
   * Outer space odyssey 
   * Toymakers’ workshop
   * Castles & kingdoms
   * Dinosaur park
-* 10-12岁年龄段：
+* **10-12 岁**
   * Mechanical scene makers
   * Pinball whiz-kids
   * Treehouse architects
   * Dazzling light designers
   * Animal bot builders
   * Secret safecrackers
-* 13-15岁年龄段：
+* **13-15 岁**
   * Custom Go-KARTS
   * Escape room experience 
   * Remote controlled bots
+
+#### ▶︎ 注意事項
+* 斯坦福科技夏令营期间，十岁以下需住在酒店，晚上有助教陪同监督，十岁以上住在斯坦福大学学生宿舍。
+* 上述价格**仅包含**美国的食宿，交通，保险和学费，**不含机票和签证**。
+* 提供协助办理签证服务，如有需要**请提前告知**。
 
 
