--- a/_docs/签证与机票.md
+++ b/_docs/签证与机票.md
@@ -4,13 +4,15 @@ permalink: /docs/签证与机票/
 redirect_from: /docs/index.html
 ---
 
-## 签证
+#### ▶︎ 签证
 
-本夏令营将在美国加州举行。中国公民参与需获得美国B1/B2旅行签证。为此，我们会提供夏令营的邀请函以便办理签证。学生可以前往美国驻中国大使馆或领事馆进行签证申请。若需要我们的进一步协助，可能会有额外费用产生。
+* 以中国公民身份参与夏令营活動者**必需取得美国B1/B2 旅行签证**。 <br>
+* 提供夏令营的邀请函以便学生办理相关签证。<br>
+* 学生可自行前往美国驻中国大使馆或领事馆进行签证申请。如需我们提供进一步协助，**請務必提前告知** (可能会有额外费用产生)。<br>
 
-## 机票
+#### ▶︎ 机票
 
-* 到达时间：2024/07/14 （美国加州时间 7：00 am 到 3:00 pm) 到达美国旧金山国际机场。
-* 结束时间：2024/07/29 （美国加州时间 7：00 am 到 3:00 pm) 离开美国旧金山国际机场。
+* **抵达时间**：2024/07/14 （美国加州时间 7：00 am 到 3:00 pm) 抵达美国旧金山国际机场(SFO)。
+* **结束时间**：2024/07/29 （美国加州时间 7：00 am 到 3:00 pm) 离开美国旧金山国际机场(SFO)。
 
-*学生可选择自行购买机票或委托我们代购。若学生选择不按照上述时间或方式进行旅行，请提前通知我们。*
+#### ❗️❗️*学生可选择自行购买机票或委托我们代购(服务费另計)。若学生选择不按照上述时间或方式进行旅行，请提前通知我们。*❗️❗️
