--- a/_docs/我要报名.md
+++ b/_docs/我要报名.md
@@ -6,7 +6,7 @@ permalink: /docs/我要报名/
 ## 我要报名
 请扫描二维码或者用此[链接](https://docs.qq.com/form/page/DSG5Oc3lKYWpTamtL)报名！
 
-![报名二维码](/img/报名表二维码.jpg)
+<img src="/img/报名表二维码.jpg" width="200px" />
 
 ## 付款与退款时间表
 
