--- a/_docs/夏令营历史与安全.md
+++ b/_docs/夏令营历史与安全.md
@@ -3,12 +3,20 @@ title: 夏令营历史与安全
 permalink: /docs/夏令营历史与安全/
 ---
 
-在covid-19疫情前，我们分别在2018年和2019年办过两届游学团，当时的举办地在德州休斯顿，合作单位是美国莱斯大学（Rice University)。请看历史照片。 
+在covid-19疫情前，我们分别在2018年和2019年在德州休斯顿举办过两次研学团。合作单位是美国南方哈佛之称的莱斯大学（Rice University)和休斯的的NASA中心。请看历史照片。 
 
+**学生莱斯大学开班仪式**
 
-## 学生莱斯大学开班仪式
-![学生莱斯大学开班仪式](/img/学生莱斯大学开班仪式.png)
-## 学生参观休斯顿NASA中心
-![学生参观休斯顿nasa](/img/学生参观休斯顿nasa.png)
-## 学生参加结业典礼
-![学生结业典礼](/img/学生结业典礼.png)
+<img src="/img/历史2.jpg" width="500px" />
+
+**学生展示课业成果**
+
+<img src="/img/历史3.jpg" width="500px" />
+
+**课间学生草坪午餐**
+
+<img src="/img/历史1.jpg" width="500px" />
+
+**结业欢送仪式**
+
+<img src="/img/历史4.jpg" width="500px" />
