--- a/_docs/四叶草牧场夏令营.md
+++ b/_docs/四叶草牧场夏令营.md
@@ -7,7 +7,7 @@ permalink: /docs/四叶草牧场夏令营/
 >四叶草牧场夏令营已经有着半个世纪的历史，位于旧金山北部山区，距离加州硅谷仅1小时20分钟车程。座落在加州索尔诺马县，毗邻世界著名的纳帕山谷红酒产区。周围群山环绕，风景优美。在这里，学生们可以近距离接触大自然，充分享受自然之美，度过一个愉快的夏令营时光。
 我们的夏令营旨在为7-16岁的孩子们提供真实的美国西部生活体验。拥有高素质且富有爱心的夏令营辅导员和专业工作人员，我们提供75个一流的活动，涵盖马术、体育、表演、手工，艺术，露营等多个领域，致力于打造一个高品质的夏令营体验。
 
-#### ▶︎ 课程特色：
+#### ▶︎ 特色活动：
 
 ##### **➢ 射箭** 
 >营员将在辅导员的指导监督下学习射箭，分组参加比赛，赢得奖项。
