Update and rename 夏令营成果.md to 历年夏令营成果.md

--- a/_docs/历年夏令营成果.md
+++ b/_docs/历年夏令营成果.md
@@ -1,6 +1,6 @@
 ---
-title: 夏令营历史与安
-permalink: /docs/夏令营历史与安全/
+title: 历年夏令营成果
+permalink: /docs/历年夏令营成果/
 ---
 
 在covid-19疫情前，我们分别在2018年和2019年在德州休斯顿举办过两次研学团。合作单位是美国南方哈佛之称的莱斯大学（Rice University)和休斯的的NASA中心。请看历史照片。 
