--- a/_docs/套餐方案与价格.md
+++ b/_docs/套餐方案与价格.md
@@ -17,6 +17,27 @@ redirect_from: /docs/index.html
 
 > 价格：56666 人民币
 
+#### ▶︎ 费用说明
+
+> ##### 以上A、B套餐皆包含
+> * 当地机场←→国外学校接送费
+> * 研习期间校外参访行程所需之交通、门票费用
+> * 个人完善保险
+> * 报名费、课程费用
+> * 研习期间：学校宿舍住宿费用
+> * 研习期间：每日三餐提供
+> * 课表内各类课后参访与娱乐活动安排费用
+> * 旅游期间旅馆住宿费用；每日三餐提供
+> * 旅游期间交通费用 (含司机、导游小费)
+
+> ##### 以上A、B套餐**不包含**
+> * 护照申请费用
+> * 签证申请费用
+> * 往返美国机票
+> * 宿舍洗衣费、旅游期间床小费
+> * 学员个人当地消费（邮电、礼品购买、个人娱乐等费用）
+> * 行程表未列之额外付费活动
+> * 国内往返机场费用
 
 
 #### ▶︎ 夏令营可选课程
