--- a/_docs/行程特色.md
+++ b/_docs/行程特色.md
@@ -1,12 +1,12 @@
 ---
-title: 行程概括
-permalink: /docs/行程概括/
+title: 行程特色
+permalink: /docs/行程特色/
 redirect_from: /docs/index.html
 ---
 <br>
-### ⭐️ 美国斯坦福大学科技夏令营一周 <br>
-### ⭐️ 硅谷户外拓展夏令营一周<br>
-### ⭐️ 周末探索硅谷品味当地美食<br>
+#### ⭐️ 美国斯坦福大学科技夏令营一周 <br>
+#### ⭐️ 硅谷户外拓展夏令营一周<br>
+#### ⭐️ 周末探索硅谷品味当地美食<br>
 <br>
 #### ▶︎ 抵达旧金山国际机场
 > 孩子周日从国内抵达旧金山国际机场（SFO)，我们将接送孩子到斯坦福大学教室进行夏令营欢迎仪式和夏令营入营宣讲。
