--- a/_docs/套餐方案与价格.md
+++ b/_docs/套餐方案与价格.md
@@ -39,6 +39,12 @@ redirect_from: /docs/index.html
 > * 行程表未列之额外付费活动
 > * 国内往返机场费用
 
+#### ▶︎ 保险内容
+> ➢ 医疗运送和送返 *实际费用* <br>
+> ➢ 医药补偿（含住院及门诊医药费用）*1,000,000 元* <br>
+> ➢ 意外身故及伤残保障 *200,000 元* <br>
+> ➢ 未成年人旅行送返费用补偿 *10,000 元* <br>
+
 #### ▶︎ 注意事项
 * 斯坦福科技夏令营期间，十岁以下需住在酒店，晚上有助教陪同监督，十岁以上住在斯坦福大学学生宿舍。
 * 上述价格**仅包含**美国的食宿，交通，保险和学费，**不含机票和签证**。
