--- a/_docs/我要报名.md
+++ b/_docs/我要报名.md
@@ -3,15 +3,21 @@ title: 我要报名
 permalink: /docs/我要报名/
 ---
 
-## 我要报名
-请扫描二维码或者用此[链接](https://docs.qq.com/form/page/DSG5Oc3lKYWpTamtL)报名！
+#### ▷ 报名与缴费方式
+* 微信报名请扫一下二维码或者点此[链接](https://docs.qq.com/form/page/DSG5Oc3lKYWpTamtL)报名！
 
-<img src="/img/报名表二维码.jpg" width="200px" />
+> <img src="/img/报名表二维码.jpg" width="200px" />
 
-## 付款与退款时间表
+* 请于报名时缴交订金¥5,000元整。 <br>
+* 请于行程开始前60天完成办理报名及签证手续。
+> ❗️❗️*中国美签位置紧张，建议行程开始前六个月开始办理签证* ❗️❗️
+* 如需代为申请签证，需额外收费¥3,000元整。
+* 剩余款项请与出发前两个月内缴齐，可用微信，支付宝，银行汇款等方式付款。
 
-* 预付定金 5000rmb（可以提供收据或发票）。
-* 我方收到定金后，会立即和家长孩子面谈，帮助家长孩子选取刚兴趣的课程以及锁夏令营位置。如果刚兴趣的课程已经额满，则从面谈结束日起，三个工作日内退款。
-* 2024年6月15日前，需要将剩余款项付清。
-* 定金一律不退，除非以下情况：
-  * 孩子美国签证被拒签，并且可以在6月15号以前提供拒签证明。
+#### ▷ 退费条件
+
+* 订金用于预订课程的注册费、住宿等，并作为团费的组成部分。在报名当天交付后，除非出现特殊情况（如课程已满），可以在七天内申请退款。超过七天后将不予退款。
+* 如果美国签证被拒绝，申请人可在出发前最晚两个月内凭拒签通知书来申请退还订金。
+* 对于因为申请签证过晚而无法参与的人员（最迟出发前四个月），订金将不予退还。
+* 行程开始前一日至第三十日以内解除合同者，赔偿总收费费用百分之三十。
+* 行程开始日或开始后始解除契约或未通知不参加者，赔偿旅游学习费用百分之百。
