--- a/_docs/我要报名.md
+++ b/_docs/我要报名.md
@@ -18,6 +18,6 @@ permalink: /docs/我要报名/
 
 * 订金用于预订课程的注册费、住宿等，并作为团费的组成部分。在报名当天交付后，除非出现特殊情况（如课程已满），可以在七天内申请退款。超过七天后将不予退款。
 * 如果美国签证被拒绝，申请人可在出发前最晚两个月内凭拒签通知书来申请退还订金。
-* 对于因为申请签证过晚而无法参与的人员（最迟出发前四个月），订金将不予退还。
+* 对于因为申请签证过晚而无法参与的人员（最迟出发前五个月），订金将不予退还。
 * 行程开始前一日至第三十日以内解除合同者，赔偿总收费费用百分之三十。
 * 行程开始日或开始后始解除契约或未通知不参加者，赔偿旅游学习费用百分之百。
