--- a/_docs/行程特色.md
+++ b/_docs/行程特色.md
@@ -9,15 +9,15 @@ redirect_from: /docs/index.html
 #### ▶︎ 抵达旧金山国际机场
 > 孩子周日从国内抵达旧金山国际机场（SFO)，我们将接送孩子到斯坦福大学教室进行夏令营欢迎仪式和夏令营入营宣讲。
 
-#### ▶︎ 第一周(周一至周五): 美国名校斯坦福大学访学
+#### ▶︎ 第一周 (周一至周五): 美国名校斯坦福大学访学
 > 学生会在世界名校斯坦福大学学习和住宿一周，我们提供由斯坦福大学专家专为7-15岁的青少年设计的课程。不同年龄段有多个课程可供选择。旨在启发孩子在人工智能时代所必备的思维能力，培养学生的兴趣，让孩子更早的接触世界和科技前沿。
 
-#### ▶︎ 第一周周末(周六至周日): 旧金山、硅谷的景点游览
+#### ▶︎ 第一周周末 (周六至周日): 旧金山、硅谷的景点游览
 > ✔️ 金门大桥和渔人码头<br>
 > ✔️ 加州大学伯克利分校<br>
 > ✔️ 硅谷高科技公司，例如苹果和谷歌公司<br>
 
-#### ▶︎ 第二周（周一至周五): 综合素质拓展夏令营（二擇一）
+#### ▶︎ 第二周 (周一至周五): 综合素质拓展夏令营 (二选一）
 + **四叶草牧场夏令营**为孩子提供丰富多彩的夏令营体验，涵盖户外活动、团队合作、手工艺、马术，露营等活动，培养他们的领导力和社交技能。通过参与各种有趣的活动，他们将建立起与大自然的深厚联系，并与其他营员一同度过难忘的时光。<br>
   + <em>此夏令营为夜营，学生会安排在夏令营所在的宿舍区居住。</em><br>
 
@@ -26,7 +26,7 @@ redirect_from: /docs/index.html
 
 
 
-#### ▶︎ 第二周周末（周六至周日）
+#### ▶︎ 第二周周末 (周六至周日）
 + 周六会带孩子游览加州一号公路，感受壮美的太平洋西海岸美景。并且带孩子游览中美元首会晤的菲洛里庄园，在庄园草坪上午餐。晚上举行欢送仪式。
   + <em>周日会送孩子搭乘回国航班，让孩子回到温暖的家。</em>
 
