--- a/_docs/创始人介绍.md
+++ b/_docs/创始人介绍.md
@@ -2,23 +2,23 @@
 title: 创始人介绍
 permalink: /docs/创始人介绍/
 ---
-### 创办初衷
-我来自安徽合肥，自从在北京师范大学本科毕业后，已在美国度过了超过十年的学习生活。虽然我没有在教育一线从事工作，但我对教育一直怀有浓厚的热情，并且享受与孩子们的互动。在过去的几个夏天，许多朋友和亲戚向我咨询如何参加美国的夏令营或考虑在美国继续深造。因此，我萌生了创办夏令营的想法，旨在为中国的孩子们提供一个深入了解美国学术和科研领域的平台，帮助他们更好地规划未来的学术和职业发展道路。
+####  ▷ 创办初衷
+*我来自安徽合肥，自从在北京师范大学本科毕业后，已在美国度过了超过十年的学习生活。虽然我没有在教育一线从事工作，但我对教育一直怀有浓厚的热情，并且享受与孩子们的互动。在过去的几个夏天，许多朋友和亲戚向我咨询如何参加美国的夏令营或考虑在美国继续深造。因此，我萌生了创办夏令营的想法，旨在为中国的孩子们提供一个深入了解美国学术和科研领域的平台，帮助他们更好地规划未来的学术和职业发展道路。*
 
-### 方明博士简历
+####  ▷ 创办人简历
 
-* 北京师范大学化学系本科 
-* 美国休斯敦大学化学系博士 
-* 美国sandia国家实验室研究员 
-* 美国谷歌公司高级工程师 
+> * 北京师范大学化学系本科 
+> * 美国休斯敦大学化学系博士 
+> * 美国sandia国家实验室研究员 
+> * 美国谷歌公司高级工程师 
 
-### 教育经历
+####  ▷ 创办人教育经历
 
-* 北京大学附属中学高中部实习教师 2009
-* 获颁教育部高中教学资格证
-* 美国休斯敦大学研究生课担任助教及讲师
-* 辅导10+各年龄段学生出国辅导，研究生申请，本科毕业项目指导，文书写作以及推荐信撰写
+> * 北京大学附属中学高中部实习教师 2009
+> * 获颁教育部高中教学资格证
+> * 美国休斯敦大学研究生课担任助教及讲师
+> * 辅导10+各年龄段学生出国辅导，研究生申请，本科毕业项目指导，文书写作以及推荐信撰写
 
-### 个人主页链接
+####  ▷ 个人主页链接
 * [领英主页](https://www.linkedin.com/in/mingsandia/)
 * [Google学术](https://scholar.google.com/citations?user=TRroB7MAAAAJ&hl=en)
