--- a/_docs/夏令营图片介绍.md
+++ b/_docs/夏令营图片介绍.md
@@ -4,53 +4,53 @@ permalink: /docs/夏令营图片介绍/
 redirect_from: /docs/index.html
 ---
 
-## 斯坦福大学科技营
-美丽的斯坦福大学校园
+#### ▷ 斯坦福大学科技营
+> 美丽的斯坦福大学校园
 
-<img src="/img/斯坦福大学-1.jpeg" width="500px" />
+> <img src="/img/斯坦福大学-1.jpeg" width="500px" />
 
-孩子们在参加机器人课程
+> 孩子们在参加机器人课程
 
-<img src="/img/id-tech-夏令营-1.webp" width="500px" />
+> <img src="/img/id-tech-夏令营-1.webp" width="500px" />
 
-孩子们在进行编程方面的讨论
+> 孩子们在进行编程方面的讨论
 
-<img src="/img/id-tech-夏令营-2.jpg" height="350px" width="500px" />
+> <img src="/img/id-tech-夏令营-2.jpg" height="350px" width="500px" />
 
-结业证书
+> 结业证书
 
-<img src="/img/id-tech-夏令营-证书.JPG" width="500px" />
+> <img src="/img/id-tech-夏令营-证书.JPG" width="500px" />
 
-## 四叶草牧场户外营
-射箭活动
+#### ▷ 四叶草牧场户外营
+> 射箭活动
 
-<img src="/img/四叶草夏令营-射箭.png" height="450px" width="500px" />
+> <img src="/img/四叶草夏令营-射箭.png" height="450px" width="500px" />
 
-夏日游泳
+> 夏日游泳
 
-<img src="/img/四叶草夏令营-游泳.png" height="450px" width="500px" />
+> <img src="/img/四叶草夏令营-游泳.png" height="450px" width="500px" />
 
-篝火晚会
+> 篝火晚会
 
-<img src="/img/四叶草夏令营-篝火.png" width="500px" />
+> <img src="/img/四叶草夏令营-篝火.png" width="500px" />
 
-团体游戏
+> 团体游戏
 
-<img src="/img/四叶草夏令营-团体游戏.png" width="500px" />
+> <img src="/img/四叶草夏令营-团体游戏.png" width="500px" />
 
-## 伽利略夏令营
-学生在参加机器人课程
+#### ▷ 伽利略夏令营
+> 学生在参加机器人课程
 
-<img src="/img/伽利略夏令营-1.webp"  width="500px" />
+> <img src="/img/伽利略夏令营-1.webp"  width="500px" />
 
-学生在驾驶自己组装的卡丁车
+> 学生在驾驶自己组装的卡丁车
 
-<img src="/img/伽利略夏令营-2.jpg" height="400px" width="500px" />
+> <img src="/img/伽利略夏令营-2.jpg" height="400px" width="500px" />
 
-## 加州湾区风景
+#### ▷ 加州湾区风景
 
-壮美的金门大桥和旧金山天际线
+> 壮美的金门大桥和旧金山天际线
 
-<img src="/img/金门大桥.jpg"  width="500px" />
+> <img src="/img/金门大桥.jpg"  width="500px" />
 
 
