--- a/_docs/历年夏令营成果.md
+++ b/_docs/历年夏令营成果.md
@@ -5,18 +5,18 @@ permalink: /docs/历年夏令营成果/
 
 在covid-19疫情前，我们分别在2018年和2019年在德州休斯顿举办过两次研学团。合作单位是美国南方哈佛之称的莱斯大学（Rice University)和休斯的的NASA中心。请看历史照片。 
 
-**学生莱斯大学开班仪式**
+> **学生莱斯大学开班仪式**
 
-<img src="/img/历史2.jpg" width="500px" />
+> <img src="/img/历史2.jpg" width="500px" />
 
-**学生展示课业成果**
+> **学生展示课业成果**
 
-<img src="/img/历史3.jpg" width="500px" />
+> <img src="/img/历史3.jpg" width="500px" />
 
-**课间学生草坪午餐**
+> **课间学生草坪午餐**
 
-<img src="/img/历史1.jpg" width="500px" />
+> <img src="/img/历史1.jpg" width="500px" />
 
-**结业欢送仪式**
+> **结业欢送仪式**
 
-<img src="/img/历史4.jpg" width="500px" />
+> <img src="/img/历史4.jpg" width="500px" />
