--- a/_docs/套餐方案与价格.md
+++ b/_docs/套餐方案与价格.md
@@ -20,7 +20,7 @@ redirect_from: /docs/index.html
 #### ▶︎ 费用说明
 
 > ##### 以上A、B套餐皆包含
-> * 当地机场←→国外学校接送费
+> * 当地机场接送费
 > * 研习期间校外参访行程所需之交通、门票费用
 > * 个人完善保险
 > * 报名费、课程费用
