--- a/_docs/斯坦福大学科技夏令营.md
+++ b/_docs/斯坦福大学科技夏令营.md
@@ -48,7 +48,7 @@ permalink: /docs/斯坦福大学科技夏令营/
 >周五：用Scratch或者VEXcode VR封装所写程序，并展示报告<br>
 
 
-#### ▶︎ CAMP 每日作息安排：
+#### ▶︎ 夏令营每日作息安排：
 ##### *实际时间可能依當日课程进度而有所调整*
 * 上午 (約7:15 am - 12:00 pm)
 > ‣ 斯坦福食堂享用美味早餐<br>
@@ -57,12 +57,12 @@ permalink: /docs/斯坦福大学科技夏令营/
 > ‣ 学生分组学习课程<br>
 
 * 下午 (約1:00 pm - 4:30 pm)
-> ‣ 室外分組活動<br>
-> ‣ 學生完成指定任務<br>
-> ‣ 今日活動总结 <br>
+> ‣ 室外分組活动<br>
+> ‣ 学生完成指定任務<br>
+> ‣ 今日活动总结 <br>
 
 * 晚上(約7:30 pm - 10 pm)
-> ‣ 由助教带领學生晚间室内活动<br>
+> ‣ 由助教带领学生晚间室内活动<br>
 
 
 #### ▶︎ 常见问题Q&A： 
