--- a/_docs/历年夏令营成果.md
+++ b/_docs/历年夏令营成果.md
@@ -3,7 +3,7 @@ title:
 permalink: /docs/历年夏令营成果/
 ---
 
-在covid-19疫情前，我们分别在2018年和2019年在德州休斯顿举办过两次研学团。合作单位是美国南方哈佛之称的莱斯大学（Rice University)和休斯的的NASA中心。请看历史照片。 
+在covid-19疫情前，我们分别在2018年和2019年在德州休斯顿举办过两次研学团。合作单位是美国南方哈佛之称的莱斯大学（Rice University)和休斯的的NASA中心。研学团的活动受到了家长和孩子们的高度好评。现在，请您浏览这些历史照片。
 
 > **学生莱斯大学开班仪式**
 
