--- a/_docs/行程特色.md
+++ b/_docs/行程特色.md
@@ -3,14 +3,14 @@ title: 行程特色
 permalink: /docs/行程特色/
 redirect_from: /docs/index.html
 ---
-#### ⭐️ 美国斯坦福大学科技夏令营一周 
-#### ⭐️ 硅谷户外拓展夏令营一周
-#### ⭐️ 周末探索硅谷品味当地美食
+#### ⭐️ 美国斯坦福大学科技夏令营一周, 世界顶级名校体验美国大学校园文化。
+#### ⭐️ 硅谷户外拓展夏令营一周，科技课程学习与夏日乐趣的完美结合。
+#### ⭐️ 硅谷经典经典导览，让孩子们发现不一样的美国风情文化。
 #### ▶︎ 抵达旧金山国际机场
 > 孩子周日从国内抵达旧金山国际机场（SFO)，我们将接送孩子到斯坦福大学教室进行夏令营欢迎仪式和夏令营入营宣讲。
 
 #### ▶︎ 第一周 (周一至周五): 美国名校斯坦福大学访学
-> 学生会在世界名校斯坦福大学学习和住宿一周，我们提供由斯坦福大学专家专为7-15岁的青少年设计的课程。不同年龄段有多个课程可供选择。旨在启发孩子在人工智能时代所必备的思维能力，培养学生的兴趣，让孩子更早的接触世界和科技前沿。
+> 学生会在世界名校斯坦福大学学习和住宿一周，我们提供由斯坦福大学专家专为7-15岁的青少年精心设计的科技创新课程。旨在启发孩子在人工智能时代所必备的思维能力，培养学生的兴趣，让孩子更早的接触世界和科技前沿。
 
 #### ▶︎ 第一周周末 (周六至周日): 旧金山、硅谷的景点游览
 > ✔️ 金门大桥和渔人码头<br>
