--- a/_docs/行程特色.md
+++ b/_docs/行程特色.md
@@ -18,10 +18,10 @@ redirect_from: /docs/index.html
 > ✔️ 硅谷高科技公司，例如苹果和谷歌公司<br>
 
 #### ▶︎ 第二周 (周一至周五): 综合素质拓展夏令营 (二选一）
-+ **四叶草牧场夏令营**为孩子提供丰富多彩的夏令营体验，涵盖户外活动、团队合作、手工艺、马术，露营等活动，培养他们的领导力和社交技能。通过参与各种有趣的活动，他们将建立起与大自然的深厚联系，并与其他营员一同度过难忘的时光。<br>
++ **四叶草牧场夏令营**为孩子提供丰富多彩的夏令营体验，涵盖户外活动、团队合作、手工艺、马术，露营等活动，培养他们的领导力和社交技能。<br>
   + <em>此夏令营为夜营，学生会安排在夏令营所在的宿舍区居住。</em><br>
 
-+ **伽利略夏令营**是一个备受赞誉的暑期营地项目，旨在激发孩子们的求知欲，创造力，动手能力和创新精神。营员们将参与涵盖科学，技术，工程，艺术和数学学科的项目和活动。从建造机器人和编写应用程序到探索自然奇观和制作独特的艺术品，伽利略营地让孩子们在实践中学习，探索自己的兴趣。<br>
++ **伽利略夏令营**是一个备受赞誉的暑期营地项目，旨在激发孩子们的求知欲，创造力，动手能力和创新精神。营员们将参与涵盖科学，技术，工程，艺术和数学学科的项目和活动。<br>
   + <em>此夏令营为日营，学生会安排在酒店居住，白天乘坐商务车往返夏令营所在地。</em>
 
 
@@ -35,3 +35,16 @@ redirect_from: /docs/index.html
 #### ▶︎ 行前要求
 + 我们需要和孩子進行英文面谈以了解学生英文程度是否符合课程要求。
  + 针对语言适应有困难的学生，我们将派出助教随堂协助。
+
+#### ▶︎ 食宿交通
++ 住宿
+  + 研学期间：学校宿舍
+  + 旅游期间：酒店住宿
++ 房型
+  + 研学期间：2-3人房
+  + 旅游期间：双人标间
++ 餐食
+  + 学校餐厅提供三餐
++ 交通
+  + 商务中巴接送
+
