--- a/_docs/四叶草牧场夏令营.md
+++ b/_docs/四叶草牧场夏令营.md
@@ -13,7 +13,7 @@ permalink: /docs/四叶草牧场夏令营/
 >夏令营的射箭活动充满活力与挑战。在阳光下，营员们穿着统一服装，学习箭术技巧。辅导员指导下，箭飞靶上，每次准确射中都激起欢呼。安全第一，专业设施确保每位营员享受乐趣并建立团队合作。
   
 ##### **➢ 艺术与手工** 
->夏令营的艺术与手工活动充满创意与乐趣。在阳光下，营员们聚焦创作，绘画和手工制作。辅导员们引导创意，孩子们用色彩与材料创意无限。每件作品都反映了他们的想象力与团队精神，丰富夏令营的多彩体验。
+>夏令营的艺术与手工活动充满创意与乐趣。在阳光下，营员们聚焦创作，绘画和手工制作。辅导员们引导创意，孩子们用色彩与材料创意无限。每件作品都反映了他们的想象力与创造力，留下丰富夏令营的体验。
 
 ##### **➢ 篝火晚会** 
 >夏令营的篝火晚会是个温馨与欢乐的盛宴。在星空下，营员们围绕熊熊篝火，唱歌、跳舞和分享故事。辅导员主持游戏和表演，加强团队凝聚力。笑声与歌声交织，营造出难忘的夏令营回忆与情感连接。
