--- a/_docs/夏令营图片介绍.md
+++ b/_docs/夏令营图片介绍.md
@@ -5,11 +5,11 @@ redirect_from: /docs/index.html
 ---
 
 #### ▷ 斯坦福大学科技营
-> 美丽的斯坦福大学校园
+> 美国西海岸硅谷的摇篮-美丽的斯坦福大学中央草坪
 
 > <img src="/img/斯坦福大学-1.jpeg" width="500px" />
 
-> 孩子们在参加机器人课程
+> 孩子们在参加夏令营机器人课程，认真的组装调试中
 
 > <img src="/img/id-tech-夏令营-1.webp" width="500px" />
 
@@ -17,7 +17,7 @@ redirect_from: /docs/index.html
 
 > <img src="/img/id-tech-夏令营-2.jpg" height="350px" width="500px" />
 
-> 结业证书
+> 完成课业，拿到斯坦福大学颁发的结业证书
 
 > <img src="/img/id-tech-夏令营-证书.JPG" width="500px" />
 
