--- a/_docs/夏令营图片介绍.md
+++ b/_docs/夏令营图片介绍.md
@@ -5,7 +5,7 @@ redirect_from: /docs/index.html
 ---
 
 #### ▷ 斯坦福大学科技营
-> 美国西海岸硅谷的摇篮-美丽的斯坦福大学中央草坪
+> 硅谷的摇篮-美丽的斯坦福大学中央草坪
 
 > <img src="/img/斯坦福大学-1.jpeg" width="500px" />
 
