--- a/_docs/夏令营图片介绍.md
+++ b/_docs/夏令营图片介绍.md
@@ -17,7 +17,7 @@ redirect_from: /docs/index.html
 
 > <img src="/img/id-tech-夏令营-2.jpg" height="350px" width="500px" />
 
-> 完成课业，拿到斯坦福大学颁发的结业证书
+> 完成课业，拿到夏令营颁发的结业证书
 
 > <img src="/img/id-tech-夏令营-证书.JPG" width="500px" />
 
