--- a/_docs/创始人介绍.md
+++ b/_docs/创始人介绍.md
@@ -3,7 +3,7 @@ title: 创始人介绍
 permalink: /docs/创始人介绍/
 ---
 ####  ▷ 创办初衷
-*我来自安徽合肥，自从在北京师范大学本科毕业后，已在美国度过了超过十年的学习生活。虽然我没有在教育一线从事工作，但我对教育一直怀有浓厚的热情，并且享受与孩子们的互动。在过去的几个夏天，许多朋友和亲戚向我咨询如何参加美国的夏令营或考虑在美国继续深造。因此，我萌生了创办夏令营的想法，旨在为中国的孩子们提供一个深入了解美国学术和科研领域的平台，帮助他们更好地规划未来的学术和职业发展道路。*
+*我来自安徽合肥，自从在北京师范大学本科毕业后，已在美国度过了超过十年的学习生活。我对教育一直怀有浓厚的热情，并且享受与孩子们的互动。在过去的几个夏天，我指导多个不同年龄段的学生进行项目辅导，职业规划，升学指导。因此，我萌生了创办夏令营的想法，旨在为中国的孩子们提供一个深入了解美国学术和科研领域的平台，帮助他们更好地规划未来的学术和职业发展道路。*
 
 ####  ▷ 创办人简历
 
