--- a/_docs/创始人介绍.md
+++ b/_docs/创始人介绍.md
@@ -2,8 +2,20 @@
 title: 创始人介绍
 permalink: /docs/创始人介绍/
 ---
-####  ▷ 创办初衷
-*我来自安徽合肥，自从在北京师范大学本科毕业后，已在美国度过了超过十年的学习生活。我对教育一直怀有浓厚的热情，并且享受与孩子们的互动。在过去的几个夏天，我指导多个不同年龄段的学生进行项目辅导，职业规划，升学指导。因此，我萌生了创办夏令营的想法，旨在为中国的孩子们提供一个深入了解美国学术和科研领域的平台，帮助他们更好地规划未来的学术和职业发展道路。*
+####  ▷ 创办人故事：融合科技与教育的旅程
+
+> **成長背景**
+> *我出生并成长于安徽合肥的一个小镇。成长过程中亲身体会到教育如何能够改变一个人的命运，因此我积极地申请奖学金，最终本科毕业后前往美国深造。*
+
+> **求学生涯**
+> *在美国求学的过程中，我遇到很多的挑战和困难，但是决心从未动摇。博士研究这段学术之旅不仅使我获得一些知识，更是丰富了我对世界和人生的理解。*
+
+> **AI科技浪潮中的转行**
+> *毕业后，我意识到AI科技革命带来的深远变革，因此决定从化学博士的领域转向AI行业。经过一段自学和实践，我成功地成为了一名在谷歌公司专精于人工智能模型训练的软件工程师。在谷歌工作的五年里，我不仅克服了许多技术难题，还为公司的发展做出了重要贡献。*
+
+> **教育的使命感和硅谷的教育愿景**
+> *我深知在科技时代教育的重要性。因此，在业余时间，我热心指导学生，帮助他们成功申请美国的研究生和博士项目，并指导他们完成多个软件项目。*
+> *硅谷不仅是科技创新的中心，也是科技教育的重要地带。因此，我决定进一步专注于教育产业，特别是为中国的孩子搭建与未来科技接轨的桥梁。。*
 
 ####  ▷ 创办人(方明)简历
 
