--- a/_docs/创始人介绍.md
+++ b/_docs/创始人介绍.md
@@ -4,30 +4,30 @@ permalink: /docs/创始人介绍/
 ---
 ####  ▷ 创办人故事：融合科技与教育的旅程
 
-> **成長背景**
+> **成长背景**
 > *我出生并成长于安徽合肥的一个小镇。成长过程中亲身体会到教育如何能够改变一个人的命运，因此我积极地申请奖学金，最终本科毕业后前往美国深造。*
 
 > **求学生涯**
-> *在美国求学的过程中，我遇到很多的挑战和困难，但是决心从未动摇。博士研究这段学术之旅不仅使我获得一些知识，更是丰富了我对世界和人生的理解。*
+> *在美国求学的过程中，我遇到很多的挑战和困难，但是决心从未动摇。博士研究这段学术之旅不仅使我获得知识，更是丰富了我对世界和人生的理解。*
 
 > **AI科技浪潮中的转行**
-> *毕业后，我意识到AI科技革命带来的深远变革，因此决定从化学博士的领域转向AI行业。经过一段自学和实践，我成功地成为了一名在谷歌公司专精于人工智能模型训练的软件工程师。在谷歌工作的五年里，我不仅克服了许多技术难题，还为公司的发展做出了重要贡献。*
+> *毕业后，我深切认识到AI科技革命所带来的深远影响，因此决定从化学领域转向AI行业。通过自学和实践，我成功地成为了谷歌公司一名在谷歌公司专攻人工智能模型训练的软件工程师。在谷歌工作的五年里，我克服了许多技术难题，也得到同事和上级的认可。*
 
 > **教育的使命感和硅谷的教育愿景**
-> *我深知在科技时代教育的重要性。因此，在业余时间，我热心指导学生，帮助他们成功申请美国的研究生和博士项目，并指导他们完成多个软件项目。*
+> *我深知在科技时代教育的重要性。因此，在业余时间，我指导多名学生，帮助他们成功申请美国的研究生，并指导他们完成多个软件项目。*
 > *硅谷不仅是科技创新的中心，也是科技教育的重要地带。因此，我决定进一步专注于教育产业，特别是为中国的孩子搭建与未来科技接轨的桥梁。。*
 
 ####  ▷ 创办人(方明)简历
 
 > * 北京师范大学化学系本科 
 > * 美国休斯敦大学化学系博士 
-> * 美国sandia国家实验室研究员 
+> * 美国Sandia国家实验室研究员 
 > * 美国谷歌公司高级工程师 
 
 ####  ▷ 创办人教育经历
 
 > * 北京大学附属中学高中部实习教师 2009
-> * 获颁教育部高中教学资格证
+> * 获颁教育部高中教学资格证 2010
 > * 美国休斯敦大学研究生课担任助教及讲师
 > * 辅导10+各年龄段学生出国辅导，研究生申请，本科毕业项目指导，文书写作以及推荐信撰写
 
