--- a/_docs/创始人介绍.md
+++ b/_docs/创始人介绍.md
@@ -8,7 +8,7 @@ permalink: /docs/创始人介绍/
 > *我出生并成长于安徽合肥的一个小镇。成长过程中亲身体会到教育如何能够改变一个人的命运，因此我积极地申请奖学金，最终本科毕业后前往美国深造。*
 
 > **求学生涯**
-> *在美国求学的过程中，我遇到很多的挑战和困难，但是决心从未动摇。博士研究这段学术之旅不仅使我获得知识，更是丰富了我对世界和人生的理解。*
+> *在美国求学的过程中，我遇到很多的挑战和困难，但是决心从未动摇。博士研究这段学术之旅不仅使我获得知识和学历，更是让我意识到教育的本质是培养学生对问题的认知和解决。*
 
 > **AI科技浪潮中的转行**
 > *毕业后，我深切认识到AI科技革命所带来的深远影响，因此决定从化学领域转向AI行业。通过自学和实践，我成功地成为了谷歌公司一名在谷歌公司专攻人工智能模型训练的软件工程师。在谷歌工作的五年里，我克服了许多技术难题，也得到同事和上级的认可。*
