--- a/_docs/创始人介绍.md
+++ b/_docs/创始人介绍.md
@@ -11,7 +11,7 @@ permalink: /docs/创始人介绍/
 > *在美国求学的过程中，我遇到很多的挑战和困难，但是决心从未动摇。博士研究这段学术之旅不仅使我获得知识和学历，更是让我意识到教育的本质是培养学生对问题的认知和解决。*
 
 > **AI科技浪潮中的转行**
-> *毕业后，我深切认识到AI科技革命所带来的深远影响，因此决定从化学领域转向AI行业。通过自学和实践，我成功地成为了谷歌公司一名在专攻人工智能模型训练的软件工程师。在谷歌工作的五年里，我克服了许多技术难题，也见证了自己的成长。*
+> *毕业后，我深切认识到AI科技革命所带来的深远影响，因此决定从化学领域转向AI行业。通过自学和实践，我成功地成为了谷歌公司一名在专攻人工智能模型训练的软件工程师。在谷歌工作的五年里，我看到了自己的成长。而面对同样怀揣求学理想的孩子，我仿佛看到当年的自己。*
 
 > **教育的使命感和硅谷的教育愿景**
 > *我深知在科技时代教育的重要性。因此，在业余时间，我指导多名学生，帮助他们成功申请美国的研究生，并指导他们完成多个软件项目。*
