--- a/_docs/创始人介绍.md
+++ b/_docs/创始人介绍.md
@@ -2,6 +2,8 @@
 title: 创始人介绍
 permalink: /docs/创始人介绍/
 ---
+<img src="/img/方明.jpg" width="250px" />
+
 ####  ▷ 创办人故事：融合科技与教育的旅程
 
 > **成长背景**
@@ -32,5 +34,5 @@ permalink: /docs/创始人介绍/
 > * 辅导10+各年龄段学生出国辅导，研究生申请，本科毕业项目指导，文书写作以及推荐信撰写
 
 ####  ▷ 个人主页链接
-* [领英主页](https://www.linkedin.com/in/mingsandia/)
-* [Google学术](https://scholar.google.com/citations?user=TRroB7MAAAAJ&hl=en)
+> * [领英主页](https://www.linkedin.com/in/mingsandia/)
+> * [Google学术](https://scholar.google.com/citations?user=TRroB7MAAAAJ&hl=en)
