--- a/_docs/我要报名.md
+++ b/_docs/我要报名.md
@@ -8,7 +8,7 @@ permalink: /docs/我要报名/
 
 > <img src="/img/报名表二维码.jpg" width="200px" />
 
-* 请于报名时缴交订金¥5,000元整。 <br>
+* 请于报名后缴交订金¥5,000元整。 <br>
 * 请于行程开始前60天完成办理报名及签证手续。
 > ❗️❗️*中国美签位置紧张，建议行程开始前六个月开始办理签证* ❗️❗️
 * 如需代为申请签证，需额外收费¥3,000元整。
