--- a/_docs/创办人介绍.md
+++ b/_docs/创办人介绍.md
@@ -2,7 +2,7 @@
 title: 创始人介绍
 permalink: /docs/创办人介绍/
 ---
-<img src="/img/方明.jpg" width="250px" />
+<img align=right src="/img/方明-modified.png" width="250px" />
 
 ####  ▷ 创办人故事：融合科技与教育的旅程
 
