--- a/_docs/我要报名.md
+++ b/_docs/我要报名.md
@@ -12,7 +12,7 @@ permalink: /docs/我要报名/
 * 请于行程开始前60天完成办理报名及签证手续。
 > ❗️❗️*中国美签位置紧张，建议行程开始前六个月开始办理签证* ❗️❗️
 * 如需代为申请签证，需额外收费¥3,000元整。
-* 剩余款项请与出发前两个月内缴齐，可用微信，支付宝，银行汇款等方式付款。
+* 剩余款项请与出发前两个月内缴齐，可用微信，支付宝，银行汇款等方式付款, 我司会出具发票/收据。
 
 #### ▷ 退费条件
 
