--- a/_docs/创办人介绍.md
+++ b/_docs/创办人介绍.md
@@ -11,13 +11,13 @@ permalink: /docs/创办人介绍/
 > *我出生并成长于安徽合肥的一个小镇。成长过程中亲身体会到教育如何能够改变一个人的命运，因此我积极地申请奖学金，最终本科毕业后前往美国深造。*
 
 > **求学生涯**
-> *在美国求学的过程中，我遇到很多的挑战和困难，但是决心从未动摇。博士研究这段学术之旅不仅使我获得知识和学历，更是让我意识到教育的本质是培养学生对问题的认知和解决。*
+> *在美国求学的过程中，遇到很多的挑战和困难，但是决心从未动摇。博士这段学术之旅不仅使我获得知识和学历，更是让我意识到教育的本质是培养学生对问题的认知和解决。*
 
 > **AI科技浪潮中的转行**
 > *毕业后，我深切认识到AI科技革命所带来的深远影响，因此决定从化学领域转向AI行业。通过自学和实践，我成功地成为了谷歌公司一名在专攻人工智能模型训练的软件工程师。在谷歌工作的五年里，我看到了自己的成长。而面对同样怀揣求学理想的孩子，我仿佛看到当年的自己。*
 
 > **教育的使命感和硅谷的教育愿景**
-> *我深知在科技时代教育的重要性。因此，在业余时间，我指导多名学生，帮助他们成功申请美国的研究生，并指导他们完成多个软件项目。*
+> *我深知在科技时代教育的重要性。因此，在业余时间，我指导多名学生，帮助他们成功申请美国的研究生，并指导他们完成暑期项目。*
 > *硅谷不仅是科技创新的中心，也是科技教育的重要地带。因此，我决定进一步专注于教育，特别是为中国的孩子搭建与未来科技接轨的桥梁。*
 
 ####  ▷ 创办人(方明)简历
