--- a/_docs/创办人介绍.md
+++ b/_docs/创办人介绍.md
@@ -20,7 +20,7 @@ permalink: /docs/创办人介绍/
 > *我深知在科技时代教育的重要性。因此，在业余时间，我指导多名学生，帮助他们成功申请美国的研究生，并指导他们完成暑期项目。*
 > *硅谷不仅是科技创新的中心，也是科技教育的重要地带。因此，我决定进一步专注于教育，特别是为中国的孩子搭建与未来科技接轨的桥梁。*
 
-####  ▷ 创办人(方明)简历
+####  ▷ 创办人简历
 
 > * 北京师范大学化学系本科 
 > * 美国休斯敦大学化学系博士 
