--- a/_docs/创办人介绍.md
+++ b/_docs/创办人介绍.md
@@ -22,10 +22,10 @@ permalink: /docs/创办人介绍/
 
 ####  ▷ 创办人简历
 
-> * 北京师范大学化学系本科 
-> * 美国休斯敦大学化学系博士 
-> * 美国Sandia国家实验室研究员 
-> * 美国谷歌公司高级工程师 
+> * 北京师范大学化学系本科  2006-2010
+> * 美国休斯敦大学化学系博士  2010-2016 
+> * 美国Sandia国家实验室研究员  2017-2018
+> * 美国谷歌公司高级工程师  2018-现在 
 
 ####  ▷ 创办人教育经历
 
