--- a/_docs/创办人介绍.md
+++ b/_docs/创办人介绍.md
@@ -8,7 +8,7 @@ permalink: /docs/创办人介绍/
 <img align=right src="/img/fangming.png" width="200px" />
 
 > **成长背景**
-> *我出生并成长于安徽合肥的一个小镇。成长过程中亲身体会到教育如何能够改变一个人的命运，因此我积极地申请奖学金，最终本科毕业后前往美国深造。*
+> *我出生并成长于安徽合肥。成长过程中亲身体会到教育如何能够改变一个人的命运，我在本科阶段积极地申请奖学金，最终大学毕业后前往美国深造。*
 
 > **求学生涯**
 > *在美国求学的过程中，遇到很多的挑战和困难，但是决心从未动摇。博士这段学术之旅不仅使我获得知识和学历，更是让我意识到教育的本质是培养学生对问题的认知和解决。*
