--- a/_docs/夏令营图片介绍.md
+++ b/_docs/夏令营图片介绍.md
@@ -17,6 +17,10 @@ redirect_from: /docs/index.html
 
 > <img src="/img/id-tech-夏令营-2.jpg" height="350px" width="500px" />
 
+> 窗明几净的斯坦福学生宿舍
+
+> <img src="/img/斯坦福学生宿舍.jpg" height="350px" width="500px" />
+
 > 完成课业，拿到夏令营颁发的结业证书
 
 > <img src="/img/id-tech-夏令营-证书.JPG" width="500px" />
