--- a/_docs/每日行程.md
+++ b/_docs/每日行程.md
@@ -3,17 +3,22 @@ title: 每日行程
 permalink: /docs/每日行程/
 ---
 
-### 简介： 
-在2002年，斯坦福大学的Glen Tripp在加州硅谷帕洛阿尔托创建了第一个夏令营，以16世纪伟大的科学家伽利略·伽利莱的名字命名。他的目标是通过灌输伽利略的无畏和创造性行动精神，激发孩子们对科技探索兴趣。作为加州地区最受欢迎的科技创新夏令营之一，伽利略Galileo提供有趣且丰富的课程。伽利略夏令营融合了娱乐和学习，覆盖从学前班到8年级的广泛年龄范围。采用伽利略创新方法®，该夏令营鼓励孩子们迎接挑战，从错误中学习，并在一个无畏且充满信心的环境中创造。
-
-### 2024夏令营代表主题课程
-
-**热带雨林 （8-9岁)**
-> 设计一个可爱的图案，加上灵动的翅膀。通过颜色的混合，创造一个绿叶丛生的场景，然后设计一个控制系统，使得一个好奇的生物从你森林的叶子中跃现。
-
-**杠杆游戏设计 （10-12岁)**
-> 学习有关杠杆和支点的知识，设计球板和弹簧动力发射器。选择一个自定义主题，然后创建并装饰斜坡、背板、保险杠、障碍物、照明等，使你的游戏独具魅力！
-
-**遥控机器人（13-15岁）**
-> 发明一个原创角色，然后通过雕刻泡沫和定制服装装饰出想要的人物特征。在给机器人装上齿轮和电机，搭建一个遥控发射器，连接电机并添加附件，赋予机器人运动能力。在一系列小挑战中测试你的机器人的表现，包括球类游戏到障碍课程应有尽有。
+|  日期   | 行程  | 行程  |
+|  :----:  |:----:  |:----: |
+| D1<br>周日<br>7.21| 搭乘国际航班，抵达旧金山国际机场<br>接机后抵达斯坦福大学，参加开营欢迎仪式<br>入住斯坦福大学宿舍  |斯坦福大学宿舍 |
+| D2<br>周一<br>7.22| 早上：用餐后开始一天的学习行程<br>中午用餐后室外分组活动<br>每日完成指定课程并总结<br>主角带领学生晚上室内活动|
+| D1<br>周二<br>7.23| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
+| D1<br>周三<br>7.24| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
+| D1<br>周四<br>7.25| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
+| D1<br>周五<br>7.26| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
+| D1<br>周六<br>7.27| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
+| D1<br>周日<br>7.28| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
+| D1<br>周一<br>7.29| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
+| D1<br>周二<br>7.30| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
+| D1<br>周三<br>7.31| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
+| D1<br>周四<br>8.1| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
+| D1<br>周五<br>8.2| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
+| D1<br>周六<br>8.3| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
+| D1<br>周日<br>8.4| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
+| D1<br>周一<br>8.5| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
 
