--- a/_docs/每日行程.md
+++ b/_docs/每日行程.md
@@ -6,19 +6,19 @@ permalink: /docs/每日行程/
 |  日期   | 行程  | 行程  |
 |  :----:  |:----:  |:----: |
 | D1<br>周日<br>7.21| 搭乘国际航班，抵达旧金山国际机场<br>接机后抵达斯坦福大学，参加开营欢迎仪式<br>入住斯坦福大学宿舍  |斯坦福大学宿舍 |
-| D2<br>周一<br>7.22| 早上：用餐后开始一天的学习行程<br>中午用餐后室外分组活动<br>每日完成指定课程并总结<br>主角带领学生晚上室内活动|
-| D1<br>周二<br>7.23| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
-| D1<br>周三<br>7.24| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
-| D1<br>周四<br>7.25| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
-| D1<br>周五<br>7.26| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
-| D1<br>周六<br>7.27| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
-| D1<br>周日<br>7.28| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
-| D1<br>周一<br>7.29| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
-| D1<br>周二<br>7.30| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
-| D1<br>周三<br>7.31| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
-| D1<br>周四<br>8.1| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
-| D1<br>周五<br>8.2| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
-| D1<br>周六<br>8.3| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
-| D1<br>周日<br>8.4| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
-| D1<br>周一<br>8.5| 搭乘国际航班，抵达旧金山国际机场<br> 接机后，抵达斯坦福大学，参加开营欢迎仪式 |斯坦福大学宿舍 |
+| D2<br>周一<br>7.22| 早上：用餐后教室签到，破冰活动与学生交流，学生分组学习课程<br>中午：午餐后室外分组活动，回教室完成课程，每日总结<br>晚上：晚餐后助教带领学生晚上室内活动，按时就寝|斯坦福大学宿舍 |
+| D3<br>周二<br>7.23| 同上 |斯坦福大学宿舍 |
+| D4<br>周三<br>7.24| 同上 |斯坦福大学宿舍 |
+| D5<br>周四<br>7.25| 同上 |斯坦福大学宿舍 |
+| D6<br>周五<br>7.26| 完成一周的课程<br>总结回报并成果展示<br>颁发结业证书<br>晚餐后抵达酒店，在助教监督下就寝 |酒店 |
+| D7<br>周六<br>7.27| 游览金门大桥和渔人码头<br>搭乘渡轮游览加州恶魔岛<br>参访加州伯克利大学|酒店 |
+| D8<br>周日<br>7.28| 参访谷歌公司，苹果公司总部<br>午餐后抵达四叶草牧场夏令营营地，参加入营欢迎仪式<br>晚餐后入住学员宿舍 |牧场夏令营学员宿舍 |
+| D9<br>周一<br>7.29| 在夏令营教员的带领下，和美国当地学生一起参加各种户外，艺术，体育活动 |牧场夏令营学员宿舍 |
+| D10<br>周二<br>7.30| 同上 |牧场夏令营学员宿舍 |
+| D11<br>周三<br>7.31| 同上 |牧场夏令营学员宿舍 |
+| D12<br>周四<br>8.1| 同上 |牧场夏令营学员宿舍 |
+| D13<br>周五<br>8.2| 同上 |牧场夏令营学员宿舍 |
+| D14<br>周六<br>8.3| 早餐完后离开牧场夏令营，抵达旧金山费罗丽庄园游览和草坪午餐<br>下午游览一号公路<br>晚餐后酒店参加夏令营欢送仪式|酒店 |
+| D15<br>周日<br>8.4| 和小伙伴告别<br>旧金山国际机场搭乘飞机回国|飞机上 |
+| D16<br>周一<br>8.5| 回到目的地城市 |温暖的家 |
 
