--- a/_docs/每日行程.md
+++ b/_docs/每日行程.md
@@ -5,6 +5,7 @@ permalink: /docs/每日行程/
 
 |  日期   | 行程  | 行程  |
 |  :-----:  |:----:  |:----: |
+| D17.21| 搭乘国际航班，抵达旧金山国际机场大学宿舍  |斯坦福大学宿舍 |
 
 |  日期   | 行程  | 行程  |
 |  :-----:  |:----:  |:----: |
