--- a/_docs/每日行程.md
+++ b/_docs/每日行程.md
@@ -3,11 +3,25 @@ title: 每日行程
 permalink: /docs/每日行程/
 ---
 
-|  日期   | 行程  | 行程  |
-|  :-----:  |:----:  |:----: |
-| D17.21| 搭乘国际航班，抵达旧金山国际机场大学宿舍  |斯坦福大学宿舍 |
+<table>
+  <tr>
+    <th>日期</th>
+    <th>日期</th>
+    <th>住宿</th>
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+</table>
 
-|  日期   | 行程  | 行程  |
+|  日期   | 日期  | 行程  |
 |  :-----:  |:----:  |:----: |
 | D1<br>周日<br>7.21| 搭乘国际航班，抵达旧金山国际机场<br>接机后抵达斯坦福大学，参加开营欢迎仪式<br>入住斯坦福大学宿舍  |斯坦福大学宿舍 |
 | D2<br>周一<br>7.22| 早上：用餐后教室签到，破冰活动与学生交流，学生分组学习课程<br>中午：午餐后室外分组活动，回教室完成课程，每日总结<br>晚上：晚餐后助教带领学生晚上室内活动，按时就寝|斯坦福大学宿舍 |
