--- a/_docs/每日行程.md
+++ b/_docs/每日行程.md
@@ -6,11 +6,11 @@ permalink: /docs/每日行程/
 <table>
   <tr>
     <th>日期</th>
-    <th>日期</th>
+    <th>行程</th>
     <th>住宿</th>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
+    <td>搭乘国际航班，抵达旧金山国际机场<br>接机后抵达斯坦福大学，参加开营欢迎仪式<br>入住斯坦福大学宿舍</td>
     <td>Maria Anders</td>
     <td>Germany</td>
   </tr>
