--- a/_docs/每日行程.md
+++ b/_docs/每日行程.md
@@ -3,9 +3,9 @@ title: 每日行程
 permalink: /docs/每日行程/
 ---
 
-<table>
+<table id="customers">
   <tr>
-    <th>日期</th>
+    <td>日期</th>
     <th>行程</th>
     <th>住宿</th>
   </tr>
@@ -13,11 +13,6 @@ permalink: /docs/每日行程/
     <td>搭乘国际航班，抵达旧金山国际机场<br>接机后抵达斯坦福大学，参加开营欢迎仪式<br>入住斯坦福大学宿舍</td>
     <td>Maria Anders</td>
     <td>Germany</td>
-  </tr>
-  <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
   </tr>
 </table>
 
