--- a/_docs/每日行程.md
+++ b/_docs/每日行程.md
@@ -10,9 +10,54 @@ permalink: /docs/每日行程/
     <th>住宿</th>
   </tr>
   <tr>
+    <td>D1<br>周日<br>7.21</td>
     <td>搭乘国际航班，抵达旧金山国际机场<br>接机后抵达斯坦福大学，参加开营欢迎仪式<br>入住斯坦福大学宿舍</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
+    <td>斯坦福大学宿舍</td>
+  </tr>
+  <tr>
+    <td>D2<br>周一<br>7.22</td>
+    <td>搭乘国际航班，抵达旧金山国际机场<br>接机后抵达斯坦福大学，参加开营欢迎仪式<br>入住斯坦福大学宿舍</td>
+    <td>斯坦福大学宿舍</td>
+  </tr>
+    <tr>
+    <td>D3<br>周二<br>7.23</td>
+    <td>搭乘国际航班，抵达旧金山国际机场<br>接机后抵达斯坦福大学，参加开营欢迎仪式<br>入住斯坦福大学宿舍</td>
+    <td>斯坦福大学宿舍</td>
+  </tr>
+    <tr>
+    <td>D4<br>周三<br>7.24</td>
+    <td>搭乘国际航班，抵达旧金山国际机场<br>接机后抵达斯坦福大学，参加开营欢迎仪式<br>入住斯坦福大学宿舍</td>
+    <td>斯坦福大学宿舍</td>
+  </tr>
+    <tr>
+    <td>D5<br>周四<br>7.25</td>
+    <td>搭乘国际航班，抵达旧金山国际机场<br>接机后抵达斯坦福大学，参加开营欢迎仪式<br>入住斯坦福大学宿舍</td>
+    <td>斯坦福大学宿舍</td>
+  </tr>
+    <tr>
+    <td>D6<br>周五<br>7.26</td>
+    <td>搭乘国际航班，抵达旧金山国际机场<br>接机后抵达斯坦福大学，参加开营欢迎仪式<br>入住斯坦福大学宿舍</td>
+    <td>斯坦福大学宿舍</td>
+  </tr>
+    <tr>
+    <td>D1<br>周日<br>7.21</td>
+    <td>搭乘国际航班，抵达旧金山国际机场<br>接机后抵达斯坦福大学，参加开营欢迎仪式<br>入住斯坦福大学宿舍</td>
+    <td>斯坦福大学宿舍</td>
+  </tr>
+    <tr>
+    <td>D1<br>周日<br>7.21</td>
+    <td>搭乘国际航班，抵达旧金山国际机场<br>接机后抵达斯坦福大学，参加开营欢迎仪式<br>入住斯坦福大学宿舍</td>
+    <td>斯坦福大学宿舍</td>
+  </tr>
+    <tr>
+    <td>D1<br>周日<br>7.21</td>
+    <td>搭乘国际航班，抵达旧金山国际机场<br>接机后抵达斯坦福大学，参加开营欢迎仪式<br>入住斯坦福大学宿舍</td>
+    <td>斯坦福大学宿舍</td>
+  </tr>
+    <tr>
+    <td>D1<br>周日<br>7.21</td>
+    <td>搭乘国际航班，抵达旧金山国际机场<br>接机后抵达斯坦福大学，参加开营欢迎仪式<br>入住斯坦福大学宿舍</td>
+    <td>斯坦福大学宿舍</td>
   </tr>
 </table>
 
