--- a/_docs/每日行程.md
+++ b/_docs/每日行程.md
@@ -50,7 +50,7 @@ permalink: /docs/每日行程/
   </tr>
     <tr>
     <td>D9<br>周一<br>7.29</td>
-    <td>在夏令营教员的带领下，和美国当地学生一起参加各种户外，艺术，体育活动</td>
+    <td>在夏令营教员的带领下，参加各种户外，艺术，体育活动</td>
     <td>牧场夏令营学员宿舍</td>
   </tr>
     <tr>
