--- a/_docs/每日行程.md
+++ b/_docs/每日行程.md
@@ -86,6 +86,6 @@ permalink: /docs/每日行程/
   <tr>
     <td>D14<br>周一<br>8.5</td>
     <td>回到目的地城市</td>
-    <td>斯坦福大学宿舍</td>
+    <td>温暖的家</td>
   </tr>
 </table>
