--- a/_docs/每日行程.md
+++ b/_docs/每日行程.md
@@ -75,13 +75,13 @@ permalink: /docs/每日行程/
   </tr>
   <tr>
     <td>D14<br>周六<br>8.3</td>
-    <td>早餐完后离开牧场夏令营，抵达旧金山费罗丽庄园游览和草坪午餐<br>下午游览一号公路<br>晚餐后酒店参加夏令营欢送仪式</td>
+    <td>早餐后告别牧场夏令营，抵达旧金山费罗丽庄园游览及草坪午餐<br>下午游览加州一号公路<br>晚餐后在酒店参加夏令营欢送仪式</td>
     <td>牧场夏令营学员宿舍</td>
   </tr>
   <tr>
     <td>D14<br>周日<br>8.4</td>
     <td>和小伙伴告别<br>旧金山国际机场搭乘飞机回国</td>
-    <td>牧场夏令营学员宿舍</td>
+    <td>飞机</td>
   </tr>
   <tr>
     <td>D14<br>周一<br>8.5</td>
