--- a/_docs/每日行程.md
+++ b/_docs/每日行程.md
@@ -15,7 +15,7 @@ permalink: /docs/每日行程/
   </tr>
   <tr>
     <td>D2<br>周一<br>7.22</td>
-    <td>早上：用餐后教室签到，破冰活动与学生交流，学生分组学习课程<br>中午：午餐后室外分组活动，回教室完成课程，每日总结<br>晚上：晚餐后助教带领学生晚上室内活动，按时就寝</td>
+    <td>早上：用餐后教室签到，破冰活动与其他学生交流，分组学习课程<br>中午：午餐后室外分组活动，回教室完成课程，每日总结<br>晚上：晚餐后助教带领学生晚上室内活动，按时就寝</td>
     <td>斯坦福大学宿舍</td>
   </tr>
   <tr>
